<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/go_to_detail"
        android:title="@string/fragment_list_item_menu_detail_title"
        android:icon="@drawable/ic_baseline_details_24"
        app:showAsAction="always"
        android:visible="false">
    </item>

    <item
        android:id="@+id/go_to_map_view"
        android:title="@string/fragment_list_item_menu_map_title"
        android:icon="@drawable/ic_public"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/search_real_estate"
        android:title="@string/fragment_list_item_menu_search_title"
        android:icon="@drawable/ic_search"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/add_real_estate"
        android:title="@string/fragment_list_item_menu_add_title"
        android:icon="@drawable/ic_add"
        app:showAsAction="always">
    </item>
</menu>