<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_add_information_container">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_add_information_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/fragment_real_estate_add_title"
            android:textStyle="bold"
            android:textSize="@dimen/fragment_real_estate_add_title_text_size"
            android:gravity="center"
            android:layout_margin="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_add_information_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_title_tv"
            android:hint="@string/fragment_real_estate_add_property"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_add_information_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_property"
            android:hint="@string/fragment_real_estate_add_price"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_add_information_surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_price"
            android:hint="@string/fragment_real_estate_add_surface"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_add_information_rooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_surface"
            android:hint="@string/fragment_real_estate_add_rooms"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_add_information_bathrooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_rooms"
            android:hint="@string/fragment_real_estate_add_bathrooms"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_add_information_bedrooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_bathrooms"
            android:hint="@string/fragment_real_estate_add_bedrooms"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_add_information_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_bedrooms"
            android:hint="@string/fragment_real_estate_add_description"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/fragment_add_information_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_description"
            android:hint="@string/fragment_real_estate_add_address"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_add_information_pointOfInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_address"
            android:hint="@string/fragment_real_estate_add_pointOfInterest"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_add_information_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_pointOfInterest"
            android:hint="@string/fragment_real_estate_add_state"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_large"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_add_information_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_information_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/fragment_real_estate_detail_margin_large"
            android:layout_marginTop="@dimen/fragment_real_estate_detail_margin_xxlarge"
            android:text="@string/fragment_add_information_add_image_btn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>